added google api key and route

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=sqlite:///dev.db
 SCHEMA=workshop_schema
+SECRET_KEY=5c4a9d9df2f589234eac7e7db3d2c27b
+API_KEY=AIzaSyBYGU77ygglcMVhcce8QUkzysQRTCg_tE8
