--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 
 -i https://pypi.org/simple
 alembic==1.9.2
+boto3==1.26.156
 click==8.1.3
 flask==2.2.2
 flask-cors==3.0.10
@@ -23,6 +24,7 @@ markupsafe==2.1.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-editor==1.0.4
+requests==2.31.0
 six==1.16.0
 sqlalchemy==1.4.46
 werkzeug==2.2.2
