--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+boto3 = "==1.18.32"
 click = "==8.1.3"
 gunicorn = "==20.1.0"
 itsdangerous = "==2.1.2"
